<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".TestActivity">


<TextView
    android:id="@+id/tv_test"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_gravity="center_horizontal"
    android:textSize="18sp"
    android:text="@string/tv_title_test"
    />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="20dp"
    android:orientation="horizontal"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tv_lang_test"/>

    <RadioGroup
        android:id="@+id/rbgroup_lang_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/rg_jpn_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rg_jpn_test"/>

        <RadioButton
            android:id="@+id/rg_eng_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rg_eng_test"/>

    </RadioGroup>


</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tv_count_test"/>

    <RadioGroup
        android:id="@+id/rbgroup_cnt_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/rg_cnt_all_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rg_cnt1_test"/>

        <RadioButton
            android:id="@+id/rg_cnt_order_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rg_cnt2_test"/>

        <EditText
            android:id="@+id/edit_cnt_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:textSize="16sp"
            android:hint="@string/hint_cnt_test"/>

    </RadioGroup>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tv_cate_test"/>

    <RadioGroup
        android:id="@+id/rbgroup_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        >
    </RadioGroup>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tv_rate1_test"/>

    <EditText
        android:id="@+id/edit_rate_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="16sp"
        android:hint="@string/hint_rate_test"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:layout_gravity="center"
        android:text="@string/tv_rate2_test"/>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tv_previous_test"/>

    <CheckBox
        android:id="@+id/check_previous_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_previous_test"/>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tv_days_test"/>

    <EditText
        android:id="@+id/edit_days_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="16sp"
        android:hint="@string/hint_days_test"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:layout_gravity="center"
        android:text="@string/tv_days2_test"/>

</LinearLayout>

<TextView
    android:id="@+id/tv_err_test"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="#D81B60"
    />

<TextView
    android:id="@+id/tv_debug_test"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:orientation="horizontal"
    >

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_start_test"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        style="@style/my_button_1"
        android:text="@string/btn_start_test"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_reset_test"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        style="@style/my_button_1"
        android:text="@string/btn_reset_test"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_back_test"
        android:layout_marginTop="30dp"
        android:layout_marginRight="5dp"
        style="@style/my_button_1"
        android:text="@string/btn_back"
        />

</LinearLayout>

</LinearLayout>