<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/lineralayout_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity"
    >

    <!-- TextView -->
    <com.beardedhen.androidbootstrap.AwesomeTextView
        android:id="@+id/tv1_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/tv_title_main"
        android:fontFamily="sans-serif-black"
        />

    <TextView
        android:id="@+id/tv_login_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/tv_user_name"
        />


    <!-- Button -->
    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn2_main"
        android:layout_marginTop="30dp"
        style="@style/button_m"
        app:bootstrapBrand="success"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"
        app:bootstrapSize="lg"
        android:text="@string/btn2_main"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn7_main"
        android:layout_marginTop="10dp"
        style="@style/button_m"
        app:bootstrapBrand="success"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"
        app:bootstrapSize="lg"
        android:text="@string/btn7_main"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn1_main"
        android:layout_marginTop="10dp"
        style="@style/button_m"
        app:bootstrapBrand="success"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"
        app:bootstrapSize="lg"
        android:text="@string/btn1_main"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn3_main"
        android:layout_marginTop="10dp"
        style="@style/button_m"
        app:bootstrapBrand="success"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"
        app:bootstrapSize="lg"
        android:text="@string/btn3_main"
        />


    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn4_main"
        android:layout_marginTop="10dp"
        style="@style/button_m"
        app:bootstrapBrand="success"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"
        app:bootstrapSize="lg"
        android:text="@string/btn4_main"
        />


    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn5_main"
        android:layout_marginTop="10dp"
        style="@style/button_m"
        app:bootstrapBrand="success"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"
        app:bootstrapSize="lg"
        android:text="@string/btn5_main"
        />


    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn6_main"
        android:layout_marginTop="10dp"
        style="@style/button_m"
        app:bootstrapBrand="success"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true"
        app:bootstrapSize="lg"
        android:text="@string/btn6_main"
        />

</LinearLayout>