<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:text="@string/tv_title_search"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/tv_key_search"
                />

            <EditText
                android:id="@+id/ed_key_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/hint_key_search"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/tv_cate_search"
                />

            <CheckBox
                android:id="@+id/check_category_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_category_search"/>

        </TableRow>

        <RadioGroup
            android:id="@+id/rbgroup_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            >
        </RadioGroup>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        >

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_do_search"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            style="@style/my_button_1"
            android:text="@string/btn_add_search"
            />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_reset_search"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            style="@style/my_button_1"
            android:text="@string/btn_reset_regist"
            />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_back_search"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            style="@style/my_button_1"
            android:text="@string/btn_back"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_delete_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:background="#FFFFFF"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:visibility="invisible"
            android:text="@string/btn_delete_search"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_debug_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_delete_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_gravity="right"
            android:textColor="@color/colorAccent"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>