<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tx_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:text="@string/title_new_login"/>


<!--        <com.beardedhen.androidbootstrap.BootstrapEditText-->
<!--            android:id="@+id/ed_login_name"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            app:bootstrapBrand="primary"-->
<!--            android:hint="@string/hint_name_login"-->
<!--            />-->

<!--        <com.beardedhen.androidbootstrap.BootstrapEditText-->
<!--            android:id="@+id/ed_login_pass"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            app:bootstrapBrand="primary"-->
<!--            android:hint="@string/hint_pass_login"-->
<!--            />-->

<!--        <com.beardedhen.androidbootstrap.BootstrapEditText-->
<!--            android:id="@+id/ed_login_pass2"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            app:bootstrapBrand="primary"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:visibility="invisible"-->
<!--            android:hint="@string/hint_pass2_login"-->
<!--            />-->

        <EditText
            android:id="@+id/ed_login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_name_login"/>


        <EditText
            android:id="@+id/ed_login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_pass_login"/>

        <EditText
            android:id="@+id/ed_login_pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:hint="@string/hint_pass2_login"/>


        <TextView
            android:id="@+id/tv_debug_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_btn1_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_new_user_login"
            android:layout_marginTop="30dp"
            android:layout_marginRight="6dp"
            style="@style/my_button_1"
            android:text="@string/btn_new_user_login"
            />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_login_login"
            android:layout_marginTop="30dp"
            android:layout_marginRight="6dp"
            style="@style/my_button_1"
            android:text="@string/btn_login_login"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_btn2_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_again_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:visibility="invisible"
            android:background="#009900"
            android:textColor="#FFFFFF"
            android:layout_marginRight="15dp"
            android:text="@string/btn_again_login"/>

        <Button
            android:id="@+id/btn_cancel_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:visibility="invisible"
            android:background="#009900"
            android:textColor="#FFFFFF"
            android:text="@string/btn_cancel_login"/>

    </LinearLayout>



</LinearLayout>