<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuestionActivity">


    <TextView
        android:id="@+id/tv1_ques"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:text="@string/tv_title_ques"
        />

    <TextView
        android:id="@+id/tv_ques_count_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:gravity="right"
        android:layout_marginRight="10dp"
        android:text="@string/tv_ques_count_test"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"
                android:text="@string/tv_question_ques"
                />
            <TextView
                android:id="@+id/tv_question_ques"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginLeft="10dp"
                android:textSize="24sp"
                android:text="@string/tv_ans_ques"
                />

            <EditText
                android:id="@+id/ed_ans_ques"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textSize="24sp"
                android:hint="Input your answer"/>

        </TableRow>

    </TableLayout>


    <TextView
        android:id="@+id/tv_debug_ques"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif-black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        >

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_quit_ques"
            android:layout_marginTop="30dp"
            android:layout_marginRight="6dp"
            style="@style/my_button_2"
            android:text="@string/btn_quit_ques"
            />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_check_next_ques"
            android:layout_marginTop="30dp"
            android:layout_marginRight="6dp"
            style="@style/my_button_2"
            android:text="@string/btn_check_ques"
            />


    </LinearLayout>

</LinearLayout>